# qwertysynth

./: .gitignore  Cargo.toml  readme.org
src/: app_state.rs  envelope.rs  equal_temperment.rs  gui.rs  instrument.rs  keyboard.rs  main.rs  midi.rs  output.rs  polysynth.rs  scale.rs  sound_test.rs  voice.rs  wave_table.rs
src/gui/: envelope_panel.rs  info_bar.rs  jack_indicator.rs  keyboard_widget.rs  mod.rs  pedal_indicator.rs  tuning_panel.rs  voice_panel.rs
src/tuning/: harmonic.rs  lattice.rs  mod.rs  mos.rs  scala.rs  stern_brocot.rs
src/voice/: additive_synth.rs  params.rs  pwm.rs  sawtooth.rs  sine.rs  square.rs  triangle.rs
