[package]
name = "qwertysynth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = [ "full" ] }
jack = { git = "https://github.com/RustAudio/rust-jack", branch = "main" }
crossbeam-channel = "0.5.6"
queues = "1.1.0"
ndarray = "0.15.6"
keyboard_query = "0.1.0"