[package]
name = "qwertysynth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.52", features = [ "full" ] }
jack = "0.13"
crossbeam-channel = "0.5"
ndarray = "0.15.6"
clap = { version = "3.2.21", features = ["derive"] }
eframe = "0.34.1"
evdev = { version = "0.13.2", features = ["tokio"] }
